--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "node-couchdb": "^1.2.0"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
