--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express": "^4.16.2",
     "node-couchdb": "^1.2.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paudieHealy/DevOpsCouchProj"
+  },
   "devDependencies": {
     "jest": "^22.4.3"
   }
