--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.16.2",
     "node-couchdb": "^1.2.0"
   },
+  "engines": {
+    "node": "9.11.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/paudieHealy/DevOpsCouchProj"
